@@ -788,6 +788,11 @@ added taskwarrior version checking.
 added support for taskwarrior 2.2.0 (avoid confirmation query).
 </p>
 </li>
+<li>
+<p>
+added window position and size restore.
+</p>
+</li>
 </ul></div>
 </div>
 </div>
@@ -856,7 +861,7 @@ Initial release.
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-10-19 15:48:52 CEST
+Last updated 2013-10-26 22:44:51 CEST
 </div>
 </div>
 </body>
