@@ -1,0 +1,6 @@
+themedir = $(datadir)/icons/hicolor
+size = scalable
+context = apps
+EXTRA_DIST = ptask.svg
+prssdistpixdir = $(themedir)/$(size)/$(context)
+prssdistpix_DATA = $(EXTRA_DIST)
